# mlx90640-RPI-Pico

./: .gitignore  CMakeLists.txt  README.md
include/: MLX90640_API.h  ThermalCamera.h  scanner.h
sample/: CMakeLists.txt
sample/include/: README.md  ThermalCamera.h  scanner.h
sample/src/: main.cpp
src/: MLX90640_API.cpp  MLX90640_PICO_I2C_Driver.cpp  main.cpp
